feat: edit time

--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
         <div class="general-info__wrapper">
             <div class="slide-prev"></div>
             <div  class="content-container">
-                <time class="clock"></time>
-                <date class="date"></date>
+                <div class="clock"></div>
+                <div class="date"></div>
                 <div class="greeting-container">
                     <span class="greeting"></span>
                     <input type="text" class="name">
