--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,23 @@
 
         </div>
     </section>
+<div class="modal">
+    <span class="modal__close-icon"></span>
+    <div class="modal_wrapper">
+        <div class="newtask">
+            <input class="newtask_input" type="text" placeholder="Task to be done.." maxlength="80%">
+            <button class="push newtask_button">Add</button>
+        </div>
+        <div class="strategies__tags tags">
+            <span class="tag tag_selected all_tag">All</span>
+            <span class="tag active_tag">Active</span>
+            <span class="tag done_tag">Done</span>
+        </div> 
+        <div class="tasks"></div>
+        <div class="tasks-done"></div>
+        <div class="tasks-delete"></div>
+</div></div>
+<div class="overlay"></div>
 </main>    
 </body>
 </html>
