--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     </section>
     <section class="actions">
         <div class="actions__wrapper">
-
+            <button class="todo">TO DO</button>
         </div>
     </section>
 <div class="modal">
