--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
 <div class="modal">
     <span class="modal__close-icon"></span>
     <div class="modal_wrapper">
+        <div class="modal__title">Todo List</div>
         <div class="newtask">
             <input class="newtask_input" type="text" placeholder="Task to be done.." maxlength="80%">
             <button class="push newtask_button">Add</button>
