--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,15 @@
         <input type="text" class="city">
         <hr>
         <i class="weather-icon owf"></i>
-        <div class="weather-error"></div>
-        <div class="description-container">
-            <span class="temperature"></span>
-            <span class="weather-description"></span>
-        </div>
-        <div class="wind"></div>
-        <div class="humidity"></div>
+        <div class="weather_wrapper">
+            <div class="weather-error"></div>
+            <div class="description-container">
+                <span class="temperature"></span>
+                <span class="weather-description"></span>
+            </div>
+            <div class="wind"></div>
+            <div class="humidity"></div>
+        </div>    
     </section>
     <section class="general-info">
         <div class="general-info__wrapper">
